feat: add generic HTTP direct download support
- Add Downloader.HTTP enum for generic direct HTTPS URLs
- Add HTTP downloader case to handle direct download links
- Add setup.exe to workflow artifacts

This enables direct downloads from HTTP/HTTPS URLs without requiring a specific download service integration.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,7 @@ jobs:
           name: Build-${{ matrix.os }}
           path: |
             dist/*-portable.exe
+            dist/*-setup.exe
             dist/*.zip
             dist/*.dmg
             dist/*.deb
