--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -64,9 +64,9 @@ linux:
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
-publish:
-  provider: github
-  owner: hydralauncher
-  repo: hydra
+# publish:
+#   provider: github
+#   owner: hydralauncher
+#   repo: hydra
 electronDownload:
   mirror: https://npmmirror.com/mirrors/electron/
